# keyboard-synth

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  adsr.hpp  dft.cpp  dft.hpp  effects.cpp  effects.hpp  fir.cpp  fir.hpp  keyboard.cpp  keyboard.hpp  main.cpp  note.hpp  notes.cpp  notes.hpp  play_note.cpp  qoa.cpp  qoa.hpp  sound.cpp  sound.hpp  waveread.cpp  waveread.hpp
include/: adsr.hpp  api.hpp  config.hpp  effect.hpp  effects.hpp  fir.hpp  iir.hpp  keyboard.hpp  keyboardstream.hpp  looper.hpp  note.hpp  notes.hpp  sound.hpp  term.hpp  waveread.hpp  yin.hpp
media/: download.sh  notes.json
midifile/: version.txt
oscillator-ui/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
oscillator-ui/public/: index.html
oscillator-ui/src/: App.css  App.tsx  CombinedWaveformDisplay.css  CombinedWaveformDisplay.tsx  ConfigPanel.css  ConfigPanel.tsx  Keyboard.css  Keyboard.tsx  Knob.tsx  OscillatorControl.css  OscillatorControl.tsx  Presets.tsx  Recorder.css  Recorder.tsx  WaveformDisplay.css  WaveformDisplay.tsx  index.css  types.tsx
public/: index.html
public/assets/: index-B3ps89Bi.js  index-B978CEJd.js  index-B9AyS6ki.css  index-BfYPsgE2.js  index-BiRhVxxI.js  index-BskvZn0V.js  index-CM989yB8.css  index-CNoXSSOq.js  index-Cc2Jrqfu.js  index-CjfOTOA1.js  index-Cl4_qVuR.css  index-Cm9CXoVk.js  index-Cqde9Ta0.css  index-D-DVV23X.js  index-DBPHNF2h.js  index-DC5yEU3c.js  index-DMz_t8iq.css  index-Vrf2PA7F.js  index-jTMW7bk-.js  index-nu1wSWHD.js  index-o6yf9pWw.js  index-ot-yqH3J.css  index-vPo_fmlr.js
src/: adsr.cpp  api.cpp  audiolizer.cpp  dft.cpp  effect.cpp  effects.cpp  iir.cpp  keyboard.cpp  keyboardstream.cpp  keyboardstream.hpp  looper.cpp  main.cpp  main_stream.cpp  note.cpp  notes.cpp  play_note.cpp  play_wave.cpp  sound.cpp  stream_test.cpp  waveread.cpp
